可以启动了

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -3,8 +3,8 @@ httpport = 8080
 runmode = dev
 
 # 数据库配置
-mysqluser = "root"
-mysqlpass = "admin"
-mysqlurls = "host.docker.internal:3307"
+mysqluser = "shenque"
+mysqlpass = "Sqqmall1234!@"
+mysqlurls = "10.10.10.159:3306"
 mysqldb   = "now_db"
 
