--- a/conf/gpt.conf
+++ b/conf/gpt.conf
@@ -1,9 +1,13 @@
-gpt_api_url = `https://api.openai.com/v1/chat/completions`
+; gpt_api_url = `https://api.openai.com/v1/chat/completions`
+gpt_api_url = `https://api.aiproxy.io/v1/chat/completions`
 gpt_model = `gpt-3.5-turbo`
-gpt_proxy = `http://localhost:7890`
-gpt_api_key = `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`
+; gpt_proxy = `http://localhost:7890`
+gpt_proxy = ``
+; gpt_api_key = `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`
+gpt_api_key = `mk-mX1TRMBar616mZyZBakNUuMYyzFxazvbsfeF8YklhD3XP0uD`
 
-gpt_api_keys = `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,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,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`
+; gpt_api_keys = `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,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,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`
+gpt_api_keys = `mk-mX1TRMBar616mZyZBakNUuMYyzFxazvbsfeF8YklhD3XP0uD,mk-C9bLHWi2kF1NE9QUO1BlQyQ1ywQZXhM1aNgThNPUEozd3j2r`
 
 outline_prompt_template = `大纲主题: {{topic}}
                            汇报人: {{sponsor}},
